# discord-bot-the-eternal-gem

./: .gitignore  Dockerfile  Dockerfile-clockchannel  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  main.yml  pull-requests.yml  python-app.yml
discord-bot-the-eternal-gem/: app.py
discord_bot_the_eternal_gem/: app.py  client.py  config.py  message_responder.py  run.py  send_message.py  welcomer.py
discord_bot_the_eternal_gem/clock_channel/: client.py  name_creator.py
tests/: test_client.py  test_message_responder.py  test_welcomer.py
tests/clock_channel/: test_name_creator.py
tests/data/: message_lookup.yml
tests/types/: fakes.py
