[tool.poetry]
name = "discord-bot-the-eternal-gem"
version = "0.1.0"
description = ""
authors = ["lesteenman <lesteenman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.6.0"
loguru = "^0.7.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.5.1"
flake8 = "^4.0.0"
pytest-asyncio = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
